# chaos

./: .dictate.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  SEMVER.md  cliff.toml  deny.toml  install.sh  justfile  pnpm-lock.yaml  pnpm-workspace.yaml
alcatraz/linux/: Cargo.toml
alcatraz/linux/src/: landlock.rs  lib.rs  main.rs
chaos-abi/: Cargo.toml
chaos-abi/src/: adapter.rs  reasoning.rs  stream.rs  tools.rs
chaos-daemon/: Cargo.toml
chaos-daemon/migrations/: 001_init.sql
chaos-daemon/src/: error.rs  lib.rs
chaos-memento/: Cargo.toml
chaos-memento/src/: lib.rs  prompts.rs  storage.rs
chaos-rollout/: Cargo.toml
chaos-rollout/src/: error.rs  policy.rs  truncation.rs
chaos-traits/: Cargo.toml
chaos-traits/src/: model.rs  state_access.rs
codex-api/: Cargo.toml
codex-api/src/: adapter.rs  endpoint.rs  lib.rs  telemetry.rs
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/app-server-protocol/src/: experimental_api.rs  lib.rs  protocol.rs
codex-rs/chaos-arsenal/: Cargo.toml
codex-rs/chaos-arsenal/src/: tools.rs
codex-rs/tui_app_server/: Cargo.toml
codex-rs/tui_app_server/src/: app.rs  app_command.rs  app_event.rs  app_event_sender.rs  app_server_session.rs  bottom_pane.rs  chatwidget.rs  clipboard_text.rs  custom_terminal.rs  debug_config.rs  key_hint.rs  lib.rs  markdown_render.rs  resume_picker.rs  selection_list.rs  slash_command.rs  status_indicator_widget.rs  terminal_palette.rs  tooltips.rs  update_action.rs
drivers/client/: Cargo.toml  README.md
drivers/client/src/: custom_ca.rs  default_client.rs  error.rs  lib.rs  request.rs  retry.rs  sse.rs  transport.rs
drivers/client/tests/: ca_env.rs
drivers/parrot/: Cargo.toml
drivers/parrot/src/: adapter.rs  anthropic.rs  chat_completions.rs  common.rs  lib.rs  openai.rs  provider.rs  sanitize.rs  sse.rs
drivers/ration/: Cargo.toml  README.md
drivers/ration/src/: provider.rs  usage.rs
etc/sysctl/: Cargo.toml  README.md
etc/sysctl/src/: agent_roles.rs  config_requirements.rs  diagnostics.rs  edit.rs  edit_tests.rs  features.rs  fingerprint.rs  lib.rs  path_utils.rs  permissions.rs  profile.rs  requirements_exec_policy.rs  schema.rs  state.rs  types.rs  types_tests.rs
include/ration/: Cargo.toml
include/ration/src/: extractor.rs  lib.rs  usage.rs
lib/libration/: Cargo.toml
lib/libration/src/: extractors.rs  lib.rs  middleware.rs  registry.rs  store.rs  test_support.rs
lib/libui/: Cargo.toml  app_event.rs  app_event_sender.rs  bottom_pane.rs  chatwidget.rs  clipboard_paste.rs  clipboard_text.rs  collaboration_modes.rs  color.rs  custom_terminal.rs  debug_config.rs  diff_render.rs  exec_cell.rs  exec_command.rs  get_git_diff.rs  history_cell.rs  insert_history.rs  key_hint.rs  lib.rs  line_truncation.rs  live_wrap.rs  markdown.rs  markdown_render.rs  markdown_render_tests.rs  markdown_stream.rs  mention_codec.rs  modifier_diff.rs  multi_agents.rs  notifications.rs  osc8.rs  session_log.rs  shimmer.rs  slash_command.rs  status.rs  status_indicator_widget.rs  streaming.rs  terminal_palette.rs  test_render.rs  test_support.rs  text_formatting.rs  (+8 more)
lib/libui/bottom_pane/: app_link_view.rs  approval_overlay.rs  bottom_pane_view.rs  chat_composer.rs  chat_composer_history.rs  command_popup.rs  composer_draft.rs  custom_prompt_view.rs  file_search_popup.rs  footer.rs  footer_tips.rs  list_selection_view.rs  mcp_add_form.rs  mcp_server_elicitation.rs  multi_select_picker.rs  paste_burst.rs  pending_input_preview.rs  pending_process_approvals.rs  popup_consts.rs  prompt_args.rs  request_user_input.rs  scroll_state.rs  selection_popup_common.rs  slash_commands.rs  state.rs  status_line_setup.rs  textarea.rs  unified_exec_footer.rs
lib/libui/chassis/: Cargo.toml  lib.rs  reducer.rs  theme.rs  turn.rs
lib/libui/chatwidget/: agent.rs  core.rs  dispatch.rs  events.rs  interrupts.rs  popups.rs  render.rs  session_header.rs  state.rs  streaming.rs  tests.rs
lib/libui/diff_render/: inline.rs  side_by_side.rs  utils.rs
lib/libui/exec_cell/: model.rs  render.rs
lib/libui/highlight/: Cargo.toml
lib/libui/history_cell/: diff.rs  render.rs  state.rs
lib/libui/markdown_render/: block_handler.rs  inline_handler.rs  line_utils.rs  styles.rs  writer.rs
lib/libui/render/: highlight.rs  renderable.rs
lib/libui/snapshots/: libui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap  libui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap  libui__bottom_pane__tests__status_and_queued_messages_snapshot.snap  libui__bottom_pane__tests__status_only_snapshot.snap  libui__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap  libui__diff_render__tests__ansi16_insert_delete_no_background.snap  libui__diff_render__tests__apply_add_block.snap  libui__diff_render__tests__apply_delete_block.snap  libui__diff_render__tests__apply_multiple_files_block.snap  libui__diff_render__tests__apply_update_block.snap  libui__diff_render__tests__apply_update_block_line_numbers_three_digits_text.snap  libui__diff_render__tests__apply_update_block_relativizes_path.snap  libui__diff_render__tests__apply_update_block_wraps_long_lines.snap  libui__diff_render__tests__apply_update_block_wraps_long_lines_text.snap  libui__diff_render__tests__apply_update_with_rename_block.snap  libui__diff_render__tests__diff_gallery_120x40.snap  libui__diff_render__tests__diff_gallery_80x24.snap  libui__diff_render__tests__diff_gallery_94x35.snap  (+40 more)
mcp-guest/: Cargo.toml
mcp-guest/src/: connect.rs  lib.rs  protocol.rs  runtime.rs  session.rs
secure/pledge/: Cargo.toml  README.md
secure/selinux/: Cargo.toml  README.md
secure/vault/: Cargo.toml  README.md
secure/watchdog/: Cargo.toml
share/dtrace/: Cargo.toml  README.md
share/hallucinate/: Cargo.toml
share/lsd/: Cargo.toml
shell-command/: Cargo.toml
shell-command/src/: parse_command.rs
srv/arsenal/: Cargo.toml  README.md
srv/cron/: Cargo.toml  README.md
stdio-to-uds/: Cargo.toml
stdio-to-uds/tests/: stdio_to_uds.rs
(+2398 files in other folders)
