[workspace]
members = [
    # sys/ — kernel
    "sys/kern/kern",
    "sys/kern/abi",
    "sys/kern/ipc",
    "sys/kern/traits",
    "sys/storage",
    # sys/arch — platform sandboxes
    "sys/arch/base",
    "sys/arch/linux",
    "sys/arch/freebsd",
    "sys/arch/macos",
    # sys/exec — process execution
    "sys/exec/fork",
    "sys/exec/sh",
    "sys/exec/doas",
    # sys/modules — loadable modules
    "sys/modules/clamp",

    # secure/ — security (peer to kernel)
    "secure/warden",
    "secure/watchdog",
    "secure/parole",
    "secure/contraband",
    "secure/selinux",
    "secure/vault",

    # drivers/ — external service adapters
    "drivers/parrot",
    "drivers/ration",
    "drivers/client",

    # srv/ — services
    "srv/mcphost",
    "srv/mcpc",
    "srv/arsenal",
    "srv/daemon",
    "srv/journald",
    "srv/pf",
    "srv/cron",

    # bin/ — userland programs
    "bin/chaos",
    "bin/console",
    "bin/concierge",

    # etc/ — configuration
    "etc/sysctl",

    # var/ — runtime state
    "var/proc",
    "var/memento",

    # share/ — extensions + data
    "share/hallucinate",
    "share/dtrace",
    "share/age-verification",

    # lib/ — shared libraries
    "lib/libasync/epoll",
    "lib/libfs/locate",
    "lib/libfs/diff",
    "lib/libmisc/argv",
    "lib/libmisc/pam",
    "lib/libmisc/keyring",
    "lib/libmisc/minions",
    "lib/libtrace/syslog",
    "lib/libtrace/snitch",
    "lib/libui/termcap",
    "lib/libui/highlight",
    "lib/libutil/realpath",
    "lib/libutil/sudoers",
    "lib/libutil/tmpfs",
    "lib/libutil/which",
    "lib/libutil/getopt",
    "lib/libutil/uptime",
    "lib/libutil/glob",
    "lib/libutil/scm",
    "lib/libutil/git",
    "lib/libutil/pwd",
    "lib/libutil/pixbuf",
    "lib/libutil/conv",
    "lib/libutil/pty",
    "lib/libutil/ready",
    "lib/libutil/jail-report",
    "lib/libutil/amphetamine",
    "lib/libutil/lex",
    "lib/libutil/wchar",
    "lib/libutil/apropos",

    # tests/
    "tests/check",
]
resolver = "2"

[workspace.package]
version = "47.0.0"
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# Internal — sys/
chaos-kern = { path = "sys/kern/kern" }
chaos-abi = { path = "sys/kern/abi" }
chaos-ipc = { path = "sys/kern/ipc" }
chaos-traits = { path = "sys/kern/traits" }
chaos-storage = { path = "sys/storage" }
alcatraz-base = { path = "sys/arch/base" }
alcatraz-linux = { path = "sys/arch/linux" }
alcatraz-freebsd = { path = "sys/arch/freebsd" }
alcatraz-macos = { path = "sys/arch/macos" }
chaos-fork = { path = "sys/exec/fork" }
chaos-sh = { path = "sys/exec/sh" }
chaos-doas = { path = "sys/exec/doas" }

# Internal — secure/
chaos-warden = { path = "secure/warden" }
chaos-watchdog = { path = "secure/watchdog" }
chaos-parole = { path = "secure/parole" }
chaos-contraband = { path = "secure/contraband" }
chaos-selinux = { path = "secure/selinux" }
chaos-vault = { path = "secure/vault" }

# Internal — sys/modules/
chaos-clamp = { path = "sys/modules/clamp" }

# Internal — drivers/
chaos-parrot = { path = "drivers/parrot" }
chaos-ration = { path = "drivers/ration" }
codex-client = { path = "drivers/client" }

# Internal — srv/
chaos-mcphost = { path = "srv/mcphost" }
mcp-guest = { path = "srv/mcpc" }
chaos-arsenal = { path = "srv/arsenal" }
chaos-daemon = { path = "srv/daemon" }
chaos-journald = { path = "srv/journald" }
chaos-pf = { path = "srv/pf" }
chaos-cron = { path = "srv/cron" }

# Internal — bin/
chaos-cli = { path = "bin/chaos" }
chaos-console = { path = "bin/console" }
chaos-concierge = { path = "bin/concierge" }

# Internal — etc/
chaos-sysctl = { path = "etc/sysctl" }

# Internal — var/
chaos-proc = { path = "var/proc" }
chaos-memento = { path = "var/memento" }

# Internal — share/
chaos-hallucinate = { path = "share/hallucinate" }
chaos-dtrace = { path = "share/dtrace" }

# Internal — lib/
chaos-epoll = { path = "lib/libasync/epoll" }
chaos-locate = { path = "lib/libfs/locate" }
chaos-diff = { path = "lib/libfs/diff" }
chaos-argv = { path = "lib/libmisc/argv" }
chaos-pam = { path = "lib/libmisc/pam" }
chaos-keyring = { path = "lib/libmisc/keyring" }
chaos-minions = { path = "lib/libmisc/minions" }
chaos-syslog = { path = "lib/libtrace/syslog" }
chaos-snitch = { path = "lib/libtrace/snitch" }
chaos-termcap = { path = "lib/libui/termcap" }
chaos-highlight = { path = "lib/libui/highlight" }
chaos-scm = { path = "lib/libutil/scm" }
chaos-git = { path = "lib/libutil/git" }
chaos-realpath = { path = "lib/libutil/realpath" }
chaos-sudoers = { path = "lib/libutil/sudoers" }
chaos-tmpfs = { path = "lib/libutil/tmpfs" }
chaos-which = { path = "lib/libutil/which" }
chaos-getopt = { path = "lib/libutil/getopt" }
chaos-uptime = { path = "lib/libutil/uptime" }
chaos-glob = { path = "lib/libutil/glob" }
chaos-pwd = { path = "lib/libutil/pwd" }
chaos-pixbuf = { path = "lib/libutil/pixbuf" }
chaos-conv = { path = "lib/libutil/conv" }
chaos-pty = { path = "lib/libutil/pty" }
chaos-ready = { path = "lib/libutil/ready" }
chaos-jail-report = { path = "lib/libutil/jail-report" }
chaos-amphetamine = { path = "lib/libutil/amphetamine" }
chaos-lex = { path = "lib/libutil/lex" }
chaos-wchar = { path = "lib/libutil/wchar" }

# Internal — tests/
chaos-check = { path = "tests/check" }
core_test_support = { path = "sys/kern/kern/tests/common" }
mcp_test_support = { path = "srv/mcphost/tests/common" }
mcp-host = { version = "0.1.22", default-features = false, features = ["stdio", "macros"] }

# External
age = "0.11.2"
ansi-to-tui = "8.0.1"
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
askama = "0.15.6"
assert_cmd = "2"
assert_matches = "1.5.0"
async-channel = "2.5.0"
async-stream = "0.3.6"
axum = { version = "0.8", default-features = false }
base64 = "0.22.1"
chaos-apropos = { path = "lib/libutil/apropos" }
bytes = "1.11.1"
chardetng = "0.1.17"
chrono = "0.4.44"
clap = "4"
clap_complete = "4"
color-eyre = "0.6.5"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
croner = "3.0.1"
csv = "1.4.0"
ctor = "0.8.0"
derive_more = "2"
diffy = "0.4.2"
dirs = "6"
dotenvy = "0.15.7"
encoding_rs = "0.8.35"
fd-lock = "4.0.4"
env-flags = "0.1.1"
env_logger = "0.11.10"
eventsource-stream = "0.2.3"
flate2 = "1.1.9"
futures = { version = "0.3", default-features = false }
gethostname = "1.1.0"
globset = "0.4"
http = "1.4.0"
icu_decimal = "2.1"
icu_locale_core = "2.1"
icu_provider = { version = "2.1", features = ["sync"] }
ignore = "0.4.25"
image = { version = "^0.25.10", default-features = false }
iana-time-zone = "0.1.65"
include_dir = "0.7.4"
jiff = { version = "0.2", features = ["serde"] }
indexmap = "2.13.0"
insta = "1.47.0"
inventory = "0.3.23"
itertools = "0.14.0"
keyring-core = "0.7"
apple-native-keyring-store = "0.2"
linux-keyutils-keyring-store = "0.2"
dbus-secret-service-keyring-store = { version = "0.3", features = ["crypto-rust"] }
landlock = "0.4.4"
libc = "0.2.183"
log = "0.4"
lru = "0.16.3"
mime_guess = "2.0.5"
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "serialize", "send"] }
multimap = "0.10.1"
notify = "8.2.0"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
openssl-sys = "*"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-http = { version = "0.31.0", default-features = false }
opentelemetry-otlp = "0.31.1"
opentelemetry_sdk = "0.31.0"
os_info = "3.14.0"
owo-colors = "4.3.0"
path-absolutize = "3.1.1"
pathdiff = "0.2"
portable-pty = "0.9.0"
predicates = "3"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.13"
rama = { git = "https://github.com/plabayo/rama.git", features = ["http-full", "rustls", "ring", "compression", "socks5", "opentelemetry"] }
rand = "0.10"
ratatui = "0.30.0"
ratatui-hypertile = "0.3.0"
ratatui-macros = "0.7.0"
regex = "1.12.3"
regex-lite = "0.1.9"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-native-certs = "0.8.3"
rustls-pki-types = "1.14.0"
schemars = "1.2.1"
seccompiler = "0.5.0"
semver = "1.0"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1.20"
serde_with = "3.18"
serde_yaml = "0.9"
state-machines = { version = "0.9", features = ["dynamic", "async"] }
serial_test = "3.4.0"
sha1 = "0.11.0"
sha2 = "0.11"
shlex = "1.3.0"
similar = "2.7.0"
socket2 = "0.6.3"
sqlx = { version = "0.8.6", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "sqlite",
    "time",
    "uuid",
] }
strum = "0.28.0"
strum_macros = "0.28.0"
supports-color = "3.0.2"
syntect = "5"
sys-locale = "0.3.2"
tempfile = "3.27.0"
tar = "0.4.45"
test-log = "0.2.19"
textwrap = "0.16.2"
thiserror = "2.0.18"
time = "0.3.47"
tiny_http = "0.12"
tokio = "1"
tokio-tungstenite = "0.29.0"
tokio-stream = "0.1.18"
tokio-test = "0.4"
tokio-util = "0.7.18"
toml = "1.1.0"
toml_edit = "0.25.8"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.23"
tracing-test = "0.2.6"
tree-sitter = "0.26.7"
tree-sitter-bash = "0.25"
ts-rs = "12"
# uds_windows removed — Chaos targets Linux/macOS/FreeBSD only
unicode-segmentation = "1.13.2"
unicode-width = "0.2"
url = "2"
urlencoding = "2.1"
uuid = "1"
vt100 = "0.16.2"
walkdir = "2.5.0"
webbrowser = "1.2"
which = "8"
wildmatch = "2.6.1"
zip = "8.4.0"
zstd = "0.13"

wiremock = "0.6"
zeroize = "1.8.2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"inspect\"))"] }

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

# cargo-shear cannot see the platform-specific openssl-sys usage, so we
# silence the false positive here instead of deleting a real dependency.
[workspace.metadata.cargo-shear]
ignored = [
    "icu_provider",
    "openssl-sys",
    "chaos-ready",
    "chaos-vault"
]

[profile.release]
lto = "fat"
split-debuginfo = "off"
strip = "symbols"
codegen-units = 1

[profile.ci-test]
debug = 1         # Reduce debug symbol size
inherits = "test"
opt-level = 0

# Uncomment to debug local changes.
# ratatui = { path = "../../ratatui" }
