[package]
name = "chaos-memento"
description = "Multi-phase memory system — extraction, consolidation, storage across sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
codex-protocol = { workspace = true }
codex-config = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
askama = { workspace = true }
chrono = { workspace = true }
codex-state = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
