[package]
name = "chaos-rollout"
description = "Session rollout persistence — JSONL recording, thread discovery, metadata backfill"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
codex-protocol = { workspace = true }
codex-config = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "io-util"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "macros"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
