[package]
name = "codex-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
chaos-abi = { workspace = true }
bytes = { workspace = true }
codex-client = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-rustls-provider = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt", "sync", "time"] }
rama = { workspace = true }
tracing = { workspace = true }
eventsource-stream = { workspace = true }
regex-lite = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
base64 = { workspace = true }
pretty_assertions = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-test = { workspace = true }
wiremock = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
