[package]
name = "mcp-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "MCP client for connecting to Model Context Protocol servers"

[features]
default = ["stdio"]
stdio = []
http = ["dep:rama", "dep:tokio-stream", "dep:url"]

[dependencies]
mcp-host = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros", "time", "io-util", "process", "net"] }
tracing = { workspace = true }
thiserror = { workspace = true }
rama = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[lints]
workspace = true
