[package]
name = "codex-stdio-to-uds"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "codex-stdio-to-uds"
path = "src/main.rs"

[lib]
name = "codex_stdio_to_uds"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }


[dev-dependencies]
codex-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
