[package]
name = "alcatraz-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "alcatraz-linux"
path = "src/main.rs"

[lib]
name = "alcatraz_linux"
path = "src/lib.rs"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
clap = { workspace = true, features = ["derive"] }
codex-core = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
landlock = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }

