[package]
name = "codex-app-server-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_app_server_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }
ts-rs = { workspace = true }
