[package]
edition.workspace = true
license.workspace = true
name = "chaos-arsenal"
version.workspace = true

[lib]
doctest = false
name = "chaos_arsenal"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-utils-string = { workspace = true }
mcp-host = { workspace = true, features = ["macros"] }
schemars = "1.0.0-alpha.20"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "process"] }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
