[package]
edition.workspace = true
license.workspace = true
publish.workspace = true
name = "codex-client"
version.workspace = true

[dependencies]
bytes = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true }
rand = { workspace = true }
rama = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
chaos-which = { workspace = true }
opentelemetry_sdk = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
