[package]
name = "chaos-parrot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Provider adapters — translate chaos-abi into wire formats"

[lints]
workspace = true

[dependencies]
chaos-abi = { workspace = true }
bytes = { workspace = true }
chaos-ipc = { workspace = true }
codex-client = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
rama = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt", "sync", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
base64 = { workspace = true }
pretty_assertions = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-test = { workspace = true }
wiremock = { workspace = true }
