[package]
name = "chaos-ration"
description = "Usage metering trait — providers implement, FreeChaOS consumes"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rama = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[package.metadata.cargo-shear]
ignored = ["tokio"]
