[package]
name = "chaos-libration"
description = "Usage-window persistence backed by chaos-storage — the ration middleware's store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doctest = false
name = "chaos_libration"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chaos-ration = { workspace = true }
chaos-storage = { workspace = true }
jiff = { workspace = true }
rama-core = { workspace = true }
rama-http-types = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
chaos-proc = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
